# minesweeper

./: CMakeLists.txt  plan.txt
include/: grid.hxx  main.hxx
src/: grid.cxx  main.cxx
